# league_ai_flutter

./: .gitignore  flutter_upgrade_instructions.txt  pubspec.yaml  setup_instructions.txt
android/: build.gradle
android/app/: build.gradle  google-services.json
android/gradle/wrapper/: gradle-wrapper.properties
assets/data/: item_int2string.json
flutter_firebase_ui/: pubspec.yaml
flutter_firebase_ui/example/: .flutter-plugins-dependencies
flutter_firebase_ui/example/lib/: main.dart
flutter_firebase_ui/lib/: email_view.dart  login_view.dart  password_view.dart  sign_up_view.dart  trouble_signin.dart  utils.dart
flutter_firebase_ui/lib/l10n/: localization.dart  translations.dart
include/: Python37  cython.h  firebase  firebase_commons.h  firebase_cpp
install/: installscript.nsi
ios/: Podfile
ios/Runner/: AppDelegate.m  GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard  (+1 more)
lib/: app.dart  main.dart  main.dart_old
lib/model/: champion.dart  champion_repository.dart  item.dart  items_repository.dart  payload.dart
lib/pages/: MobilePairingPage.dart  QRPage.dart  home.dart  login.dart  main_page_template.dart  subscribe.dart
lib/resources/: Colors.dart  Strings.dart  ads.dart
lib/supplemental/: asymmetric_view.dart  product_card.dart  product_columns.dart  utils.dart
lib/widgets/: appbar.dart  breathing_text.dart  confirm_dialog.dart  items_list.dart  logo.dart
libs/: firebase_functions.lib  firebase_messaging.lib  firebase_messaging_d.lib
plugins/btnonce/: .gitignore  BUILD.gn  pubspec.yaml
plugins/btnonce/common/: bt_channel_constants.cc  channel_constants.cc  channel_constants.h
plugins/btnonce/lib/: btnonce.dart
plugins/btnonce/lib/src/: callbacks.dart  channel_controller.dart  utilities.dart
plugins/btnonce/windows/include/btnonce/: btnonce_plugin.h  webview.h  webview.h_bak
plugins/btnonce/windows/src/: btnonce_plugin.cc
plugins/fbfunctions/: .flutter-plugins-dependencies  BUILD.gn  README.md  pubspec.yaml
plugins/fbfunctions/windows/: CMakeLists.txt  PluginInfo.props  fbfunctions_plugin.cpp  fbfunctions_plugin.h  google-services.json  plugin.vcxproj  plugin.vcxproj.filters
plugins/fbfunctions/windows/include/fbfunctions/: fbfunctions_plugin.h
plugins/fbfunctions/windows/src/: fbfunctions_plugin.cc
plugins/launchbrowser/: pubspec.yaml
src/: desktop_main.cpp  flutter_embedder_example.cpp  json_message_codec.cc  json_method_codec.cc
windows/: AppConfiguration.props  CMakeLists.txt  RCa06552  Runner - Copy.vcxproj  Runner.aps  Runner.rc  Runner.sln  Runner.vcxproj  Runner.vcxproj.filters  Runner2.rc  Runner3.rc  db_key  google-services.json  main.cpp  postbuild.bat  resource.h  resource2.h  resource3.h  uid  window_configuration.cpp
windows/runner/: CMakeLists.txt  Runner.rc  google-services.json  main.cpp  my_utils.h  window_configuration.cpp
windows/scripts/: bundle_assets_and_deps.bat  postbuild.bat
windows_fde/: GLFW Example.vcxproj  GLFW Example.vcxproj.filters  bt.html  common.h  db_key  desktop_main.cpp  firebase_commons.h  flutter_embedder_example.cpp  google-services.json  styles.css  uid
(+59 files in other folders)
