# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/packaging.gni")

published_shared_library("btnonce") {
  output_name = "flutter_embedder_$target_name"

  sources = [
    "common/channel_constants.cc",
    "common/channel_constants.h",
  ]
  #if (is_windows) {
    sources += [ "windows/src/btnonce_plugin.cc" ]
    public = [
      "windows/include/btnonce/btnonce_plugin.h",
    ]
  #}

  defines = [
    "BTNONCE_PLUGIN_IMPL",
  ]

  deps = [
    "//library:flutter_embedder",
    "//library/common/client_wrapper:client_wrapper",
  ]

  #if (is_windows) {
    public_header_subdir = "btnonce"

    configs += [
      "//build/windows/config:gtk3",
      "//build/windows/config:jsoncpp",
    ]
  #}
}
